# auggie-rs

./: .gitignore  AGENTS.md  Cargo.toml
src/: main.rs  metadata.rs  oauth.rs  runtime.rs  session.rs  telemetry.rs
src/api/: authenticated.rs  batch_upload.rs  client.rs  get_models.rs  http.rs  mod.rs  prompt_enhancer.rs  record_request_events.rs  token.rs  types.rs
src/api/agents/: codebase_retrieval.rs  mod.rs
src/cli/: args.rs  mod.rs  paths.rs
src/command/: login.rs  logout.rs  mod.rs  preview.rs  status.rs
src/domain/: mod.rs
src/mcp/: handlers.rs  mod.rs  server.rs  types.rs
src/mcp/tools/: codebase_retrieval.rs  common.rs  echo.rs  mod.rs  prompt_enhancer.rs  session.rs
src/startup/: ensure.rs  mod.rs  model_resolver.rs
src/workspace/: cache.rs  manager.rs  mod.rs  scanner.rs  sync.rs  tests.rs  types.rs  upload.rs
